--- a/src/main/resources/assets/urushi/lang/en_us.json
+++ b/src/main/resources/assets/urushi/lang/en_us.json
@@ -2271,6 +2271,7 @@
 	"info.urushi.japanese_cedar_sapling": "Generated on hills and in the Kakuriyo Dimension",
 	"info.urushi.lacquer_sapling": "Generated in forests, spawner chests and chests in villages in plains.",
 
-   "patchouli.urushi.book.name": "A trip to the Underroot",
-   "patchouli.urushi.book.landing_text": "The guide that helps you travel through the world of Urushi - written by luoxueyasha"
+   "patchouli.urushi.book.name": "Trip to the Underroot",
+   "patchouli.urushi.book.subtitle": "Utsushiyo Banare",
+   "patchouli.urushi.book.landing_text": "The guide that helps you travel through the worlds of Urushi. Ready for your $(#cc3345)afterlife$(#000)?"
 }
