--- a/src/main/resources/assets/urushi/lang/zh_cn.json
+++ b/src/main/resources/assets/urushi/lang/zh_cn.json
@@ -368,33 +368,33 @@
 
   "block.urushi.blank_fusuma": "素色纸拉门",
 
-  "block.urushi.blue_seigaiha_fusuma": "天蓝色青海波纸拉门",
+  "block.urushi.blue_seigaiha_fusuma": "浅蓝色青海波纸拉门",
 
-  "block.urushi.blue_sayagata_fusuma": "天蓝色丝绫纹纸拉门",
+  "block.urushi.blue_sayagata_fusuma": "浅蓝色丝绫纹纸拉门",
 
   "block.urushi.sliding_glass_door": "玻璃拉门",
 
-  "block.urushi.oak_shoji_pane": "橡木亮窗障子",
+  "block.urushi.oak_shoji_pane": "橡木障子门上窗",
 
-  "block.urushi.spruce_shoji_pane": "云杉木亮窗障子",
+  "block.urushi.spruce_shoji_pane": "云杉木障子门上窗",
 
-  "block.urushi.birch_shoji_pane": "白桦木亮窗障子",
+  "block.urushi.birch_shoji_pane": "白桦木障子门上窗",
 
-  "block.urushi.jungle_shoji_pane": "丛林木亮窗障子",
+  "block.urushi.jungle_shoji_pane": "丛林木障子门上窗",
 
-  "block.urushi.acacia_shoji_pane": "金合欢木亮窗障子",
+  "block.urushi.acacia_shoji_pane": "金合欢木障子门上窗",
 
-  "block.urushi.dark_oak_shoji_pane": "深色橡木亮窗障子",
+  "block.urushi.dark_oak_shoji_pane": "深色橡木障子门上窗",
 
-  "block.urushi.japanese_apricot_shoji_pane": "梅木亮窗障子",
+  "block.urushi.japanese_apricot_shoji_pane": "梅木障子门上窗",
 
-  "block.urushi.sakura_shoji_pane": "樱花木亮窗障子",
+  "block.urushi.sakura_shoji_pane": "樱花木障子门上窗",
 
-  "block.urushi.cypress_shoji_pane": "扁柏木亮窗障子",
+  "block.urushi.cypress_shoji_pane": "扁柏木障子门上窗",
 
-  "block.urushi.red_urushi_shoji_pane": "朱漆木亮窗障子",
+  "block.urushi.red_urushi_shoji_pane": "朱漆木障子门上窗",
 
-  "block.urushi.black_urushi_shoji_pane": "黑漆木亮窗障子",
+  "block.urushi.black_urushi_shoji_pane": "黑漆木障子门上窗",
 
   "block.urushi.oak_shoji": "橡木障子门",
 
@@ -654,13 +654,13 @@
 
   "info.urushi.fox_hopper": "可吸收上方3格高度的掉落物",
 
-  "info.urushi.framed_block1": "此类方块带有连接材质",
+  "info.urushi.framed_block1": "此类方块默认状态下带有连接材质",
 
-  "info.urushi.framed_block2": "按住",
+  "info.urushi.framed_block2": "单人游戏下，按下",
 
-  "info.urushi.framed_block3": "键放置可令方块之间不连接（单人游戏）",
+  "info.urushi.framed_block3": "键可切换放下的方块是否与默认状态下的方块连接",
 
-  "info.urushi.framed_block4": "潜行时放置可令方块之间不连接（多人游戏）",
+  "info.urushi.framed_block4": "多人游戏下，潜行时放置可令放下的方块与默认状态下的方块不连接",
 
   "info.urushi.iron_ingot": "右击以放置，再使用铁锤有节奏地敲打",
 
@@ -884,9 +884,9 @@
 
   "item.urushi.tiny_black_dye": "小份黑色染料",
 
-  "block.urushi.senbakoki": "脱粒机",
+  "block.urushi.senbakoki": "千齿脱粒机",
 
-  "info.urushi.rawrice": "对脱粒机使用稻穗以获得2个糙米",
+  "info.urushi.rawrice": "对千齿脱粒机使用稻穗以获得2个糙米",
 
   "info.urushi.rawurushi": "对割开的漆木原木使用碗以获得",
 
@@ -920,27 +920,27 @@
 
   "entity.urushi.karaage_food": "炸鸡",
 
-  "block.urushi.oak_fushiranma": "橡木叉型亮窗",
+  "block.urushi.oak_fushiranma": "橡木叉型门上窗",
 
-  "block.urushi.spruce_fushiranma": "云杉木叉型亮窗",
+  "block.urushi.spruce_fushiranma": "云杉木叉型门上窗",
 
-  "block.urushi.birch_fushiranma": "白桦木叉型亮窗",
+  "block.urushi.birch_fushiranma": "白桦木叉型门上窗",
 
-  "block.urushi.jungle_fushiranma": "丛林木叉型亮窗",
+  "block.urushi.jungle_fushiranma": "丛林木叉型门上窗",
 
-  "block.urushi.acacia_fushiranma": "金合欢木叉型亮窗",
+  "block.urushi.acacia_fushiranma": "金合欢木叉型门上窗",
 
-  "block.urushi.dark_oak_fushiranma": "深色橡木叉型亮窗",
+  "block.urushi.dark_oak_fushiranma": "深色橡木叉型门上窗",
 
-  "block.urushi.japanese_apricot_fushiranma": "梅木叉型亮窗",
+  "block.urushi.japanese_apricot_fushiranma": "梅木叉型门上窗",
 
-  "block.urushi.sakura_fushiranma": "樱花木叉型亮窗",
+  "block.urushi.sakura_fushiranma": "樱花木叉型门上窗",
 
-  "block.urushi.cypress_fushiranma": "扁柏木叉型亮窗",
+  "block.urushi.cypress_fushiranma": "扁柏木叉型门上窗",
 
-  "block.urushi.red_urushi_fushiranma": "朱漆木叉型亮窗",
+  "block.urushi.red_urushi_fushiranma": "朱漆木叉型门上窗",
 
-  "block.urushi.black_urushi_fushiranma": "黑漆木叉型亮窗",
+  "block.urushi.black_urushi_fushiranma": "黑漆木叉型门上窗",
 
   "fluid.urushi.hot_spring_water": "温泉水",
 
@@ -1000,7 +1000,7 @@
 
   "block.urushi.japanese_cedar_parapet": "柳杉木栏杆",
 
-  "block.urushi.japanese_cedar_shoji_pane": "柳杉木亮窗障子",
+  "block.urushi.japanese_cedar_shoji_pane": "柳杉木障子门上窗",
 
   "block.urushi.japanese_cedar_shoji": "柳杉木障子门",
 
@@ -1120,7 +1120,7 @@
 
   "block.urushi.grass_block_with_fallen_sakura_leaves": "被樱花树落叶覆盖的草方块",
 
-  "item.urushi.yomotsuhegui_fruit": "黄泉灶食之果",
+  "item.urushi.yomotsuhegui_fruit": "黄泉户契之果",
 
   "item.urushi.lantern_plant_fruit": "鬼灯球",
 
@@ -1132,7 +1132,7 @@
 
   "info.urushi.ghost_block2": "被红石激活时拟态成正常方块",
 
-  "block.urushi.japanese_cedar_fushiranma": "柳杉木叉型亮窗",
+  "block.urushi.japanese_cedar_fushiranma": "柳杉木叉型门上窗",
 
   "info.urushi.wood_element_block": "元素：木气",
 
@@ -1476,7 +1476,7 @@
 
     "info.urushi.sacred_rock2": "其正面存在元素一致的方块时，会吸收方块并生产灵力",
 
-    "info.urushi.sacred_rock3": "正面为纸条最长的一侧",
+    "info.urushi.sacred_rock3": "正面为纸垂最长的一侧",
 
     "info.urushi.emitter1": "可从方块输出灵力",
 
@@ -1954,15 +1954,15 @@
 
     "item.urushi.iron_katana": "打刀",
 
-    "item.urushi.wood_element_paper": "木气符纸",
+    "item.urushi.wood_element_paper": "木气纸垂",
 
-    "item.urushi.fire_element_paper": "火气符纸",
+    "item.urushi.fire_element_paper": "火气纸垂",
 
-    "item.urushi.earth_element_paper": "土气符纸",
+    "item.urushi.earth_element_paper": "土气纸垂",
 
-    "item.urushi.metal_element_paper": "金气符纸",
+    "item.urushi.metal_element_paper": "金气纸垂",
 
-    "item.urushi.water_element_paper": "水气符纸",
+    "item.urushi.water_element_paper": "水气纸垂",
 
     "block.urushi.rock": "石块",
 
@@ -2010,15 +2010,15 @@
 
     "info.urushi.katana": "右击可突进并对周围的生物造成伤害",
 
-    "info.urushi.wood_element_paper": "用纸右击木气方块以获得",
+    "info.urushi.wood_element_paper": "用纸垂右击木气方块以获得",
 
-    "info.urushi.fire_element_paper": "用纸右击火气方块以获得",
+    "info.urushi.fire_element_paper": "用纸垂右击火气方块以获得",
 
-    "info.urushi.earth_element_paper": "用纸右击土气方块以获得",
+    "info.urushi.earth_element_paper": "用纸垂右击土气方块以获得",
 
-    "info.urushi.metal_element_paper": "用纸右击金气方块以获得",
+    "info.urushi.metal_element_paper": "用纸垂右击金气方块以获得",
 
-    "info.urushi.water_element_paper": "用纸右击水气方块以获得",
+    "info.urushi.water_element_paper": "用纸垂右击水气方块以获得",
     "block.urushi.oak_framed_orange_plaster": "橡木框橙色灰泥",
     "block.urushi.oak_framed_magenta_plaster": "橡木框品红色灰泥",
     "block.urushi.oak_framed_light_blue_plaster": "橡木框淡蓝色灰泥",
@@ -2200,75 +2200,75 @@
     "block.urushi.black_framed_red_plaster": "黑漆木框红色灰泥",
     "block.urushi.black_framed_black_plaster": "黑漆木框黑色灰泥",
     "itemGroup.urushi_plaster": "漆MOD丨灰泥",
-    "item.urushi.baked_mochocho": "",
-    "info.urushi.obanyaki": "Oban-yaki",
-    "info.urushi.kaitenyaki": "Kaiten-yaki",
-    "info.urushi.imagawayaki": "Imagawa-yaki",
-    "info.urushi.oyaki": "Oyaki",
-    "info.urushi.gozasourou": "Gozasoro",
-    "info.urushi.hammer": "Right-Click to blocks to change the texture conection.",
-    "item.urushi.shide": "Shide",
-    "item.urushi.tsuna": "Tsuna",
-    "item.urushi.tsuna_sashimi": "Tsuna Sashimi",
-    "item.urushi.salmon_sashimi": "Salmon Sashimi",
-    "item.urushi.squid_sashimi": "Squid Sashimi",
-    "item.urushi.salmon_roe": "Salmon Roe",
-    "item.urushi.tsuna_sushi": "Tsuna Sushi",
-    "item.urushi.salmon_sushi": "Salmon Sushi",
-    "item.urushi.squid_sushi": "Squid Sushi",
-    "item.urushi.egg_sushi": "Egg Sushi",
-    "item.urushi.salmon_roe_sushi": "Salmon Roe Sushi",
-    "item.urushi.inari": "Inari",
-    "item.urushi.syari": "Syari",
-    "block.urushi.sushi_conveyor": "Conveyor for Sushi",
-    "entity.urushi.tsuna_sushi_food": "Tsuna Sushi",
-    "entity.urushi.salmon_sushi_food": "Salmon Sushi",
-    "entity.urushi.squid_sushi_food": "Squid Sushi",
-    "entity.urushi.egg_sushi_food": "Egg Sushi",
-    "entity.urushi.salmon_roe_sushi_food": "Salmon Roe Sushi",
-    "entity.urushi.inari_food": "Inari",
-    "block.urushi.urushi_hopper": "Urushi Hopper",
-	"container.urushihopper": "Urushi Hopper",
-	"info.urushi.urushi_hopper": "A low cost hopper",
-	"item.urushi.yakitori": "ねぎま",
-	"item.urushi.hiyayakko": "冷奴",
-	"item.urushi.matured_japanese_apricot_fruit": "Matured Japanese Apricot Fruit",
-	"item.urushi.pickled_japanese_apricot": "Pickled Japanese Apricot",
-    "block.urushi.green_onion_crop": "Green Onion",
-    "item.urushi.wood_enhanced_jadeite": "Wood Enhanced Jadeite",
-    "item.urushi.fire_enhanced_jadeite": "Fire Enhanced Jadeite",
-    "item.urushi.earth_enhanced_jadeite": "Earth Enhanced Jadeite",
-    "item.urushi.metal_enhanced_jadeite": "Metal Enhanced Jadeite",
-    "item.urushi.water_enhanced_jadeite": "Water Enhanced Jadeite",
-    "block.urushi.wood_enhanced_jadeite_brick": "Wood Enhanced Jadeite Brick",
-    "block.urushi.fire_enhanced_jadeite_brick": "Fire Enhanced Jadeite Brick",
-    "block.urushi.earth_enhanced_jadeite_brick": "Earth Enhanced Jadeite Brick",
-    "block.urushi.metal_enhanced_jadeite_brick": "Metal Enhanced Jadeite Brick",
-    "block.urushi.water_enhanced_jadeite_brick": "Water Enhanced Jadeite Brick",
-    "block.urushi.wood_element_hokora": "Wood Element Hokora",
-    "block.urushi.fire_element_hokora": "Fire Element Hokora",
-    "block.urushi.earth_element_hokora": "Earth Element Hokora",
-    "block.urushi.metal_element_hokora": "Metal Element Hokora",
-    "block.urushi.water_element_hokora": "Water Element Hokora",
-    "block.urushi.wood_element_crafting_table_tier2": "Jadeite Wood Element Altar",
-    "block.urushi.fire_element_crafting_table_tier2": "Jadeite Fire Element Altar",
-    "block.urushi.earth_element_crafting_table_tier2": "Jadeite Earth Element Altar",
-    "block.urushi.metal_element_crafting_table_tier2": "Jadeite Metal Element Altar",
-    "block.urushi.water_element_crafting_table_tier2": "Jadeite Water Element Altar",
-    "gui.jei.category.urushi.wood_element_tier2_crafting": "Ritual",
-    "gui.jei.category.urushi.fire_element_tier2_crafting": "Ritual",
-    "gui.jei.category.urushi.earth_element_tier2_crafting": "Ritual",
-    "gui.jei.category.urushi.metal_element_tier2_crafting": "Ritual",
-    "gui.jei.category.urushi.water_element_tier2_crafting": "Ritual",
-    "info.urushi.hokora": "Right-click or use a Hopper to insert the required item. This generates 5 Reiryoku.",
-    "info.urushi.wood_hokora": "Required Item : Matured Japanese Apricot Fruit",
-    "info.urushi.fire_hokora": "Required Item : Wheat",
-    "info.urushi.earth_hokora": "Required Item : Rice Ear",
-    "info.urushi.metal_hokora": "Required Item : Green Onion",
-    "info.urushi.water_hokora": "Required Item : Soy Beans",
-	"info.urushi.cypress_sapling": "Generated on hills",
-	"info.urushi.japanese_cedar_sapling": "Generated on hills and in the Kakuriyo Dimension",
-	"info.urushi.lacquer_sapling": "Generated in forests, spawner chests and chests in villages in plains."
+    "item.urushi.baked_mochocho": "红豆车轮饼",
+    "info.urushi.obanyaki": "大判烧",
+    "info.urushi.kaitenyaki": "回转烧",
+    "info.urushi.imagawayaki": "今川烧",
+    "info.urushi.oyaki": "烧饼",
+    "info.urushi.gozasourou": "御座候",
+    "info.urushi.hammer": "右击方块以改变方块间的连接材质",
+    "item.urushi.shide": "纸垂",
+    "item.urushi.tsuna": "生金枪鱼",
+    "item.urushi.tsuna_sashimi": "金枪鱼刺身",
+    "item.urushi.salmon_sashimi": "鲑鱼刺身",
+    "item.urushi.squid_sashimi": "鱿鱼刺身",
+    "item.urushi.salmon_roe": "鲑鱼子",
+    "item.urushi.tsuna_sushi": "金枪鱼寿司",
+    "item.urushi.salmon_sushi": "鲑鱼寿司",
+    "item.urushi.squid_sushi": "鱿鱼寿司",
+    "item.urushi.egg_sushi": "玉子寿司",
+    "item.urushi.salmon_roe_sushi": "鲑鱼子寿司",
+    "item.urushi.inari": "稻荷寿司",
+    "item.urushi.syari": "舍利饭",
+    "block.urushi.sushi_conveyor": "寿司传送带",
+    "entity.urushi.tsuna_sushi_food": "金枪鱼寿司",
+    "entity.urushi.salmon_sushi_food": "鲑鱼寿司",
+    "entity.urushi.squid_sushi_food": "鱿鱼寿司",
+    "entity.urushi.egg_sushi_food": "玉子寿司",
+    "entity.urushi.salmon_roe_sushi_food": "鲑鱼子寿司",
+    "entity.urushi.inari_food": "稻荷寿司",
+    "block.urushi.urushi_hopper": "漆木漏斗",
+	"container.urushihopper": "漆木漏斗",
+	"info.urushi.urushi_hopper": "一种低成本漏斗",
+	"item.urushi.yakitori": "鸡葱串",
+	"item.urushi.hiyayakko": "凉拌豆腐",
+	"item.urushi.matured_japanese_apricot_fruit": "熟梅子",
+	"item.urushi.pickled_japanese_apricot": "梅干",
+    "block.urushi.green_onion_crop": "葱",
+    "item.urushi.wood_enhanced_jadeite": "木气加持的翡翠",
+    "item.urushi.fire_enhanced_jadeite": "火气加持的翡翠",
+    "item.urushi.earth_enhanced_jadeite": "土气加持的翡翠",
+    "item.urushi.metal_enhanced_jadeite": "金气加持的翡翠",
+    "item.urushi.water_enhanced_jadeite": "水气加持的翡翠",
+    "block.urushi.wood_enhanced_jadeite_brick": "木气加持的翡翠砖",
+    "block.urushi.fire_enhanced_jadeite_brick": "火气加持的翡翠砖",
+    "block.urushi.earth_enhanced_jadeite_brick": "土气加持的翡翠砖",
+    "block.urushi.metal_enhanced_jadeite_brick": "金气加持的翡翠砖",
+    "block.urushi.water_enhanced_jadeite_brick": "水气加持的翡翠砖",
+    "block.urushi.wood_element_hokora": "木气神龛",
+    "block.urushi.fire_element_hokora": "火气神龛",
+    "block.urushi.earth_element_hokora": "土气神龛",
+    "block.urushi.metal_element_hokora": "金气神龛",
+    "block.urushi.water_element_hokora": "水气神龛",
+    "block.urushi.wood_element_crafting_table_tier2": "翡翠木气仪式台",
+    "block.urushi.fire_element_crafting_table_tier2": "翡翠火气仪式台",
+    "block.urushi.earth_element_crafting_table_tier2": "翡翠土气仪式台",
+    "block.urushi.metal_element_crafting_table_tier2": "翡翠金气仪式台",
+    "block.urushi.water_element_crafting_table_tier2": "翡翠水气仪式台",
+    "gui.jei.category.urushi.wood_element_tier2_crafting": "仪式",
+    "gui.jei.category.urushi.fire_element_tier2_crafting": "仪式",
+    "gui.jei.category.urushi.earth_element_tier2_crafting": "仪式",
+    "gui.jei.category.urushi.metal_element_tier2_crafting": "仪式",
+    "gui.jei.category.urushi.water_element_tier2_crafting": "仪式",
+    "info.urushi.hokora": "右击或使用漏斗以放入指定物品，每个物品可产生5点对应灵力",
+    "info.urushi.wood_hokora": "需要：熟梅子",
+    "info.urushi.fire_hokora": "需要：小麦",
+    "info.urushi.earth_hokora": "需要：稻穗",
+    "info.urushi.metal_hokora": "需要：葱",
+    "info.urushi.water_hokora": "需要：大豆",
+	"info.urushi.cypress_sapling": "在主世界的山地类群系中生成",
+	"info.urushi.japanese_cedar_sapling": "在主世界的山地类群系或幽世维度中生成",
+	"info.urushi.lacquer_sapling": "在主世界的森林群系中，或地牢与平原村庄中的箱子中生成"
 
     
 
