--- a/src/main/resources/assets/urushi/lang/ja_jp.json
+++ b/src/main/resources/assets/urushi/lang/ja_jp.json
@@ -944,6 +944,8 @@
 
    "fluid.urushi.hot_spring_water": "温泉水",
 
+   "block.urushi.hot_spring_water": "温泉水",
+
    "item.urushi.hot_spring_water_bucket": "温泉水入りバケツ",
 
    "gui.jei.category.urushi.fox_eating": "狐の食事",
