--- a/src/main/resources/assets/urushi/lang/zh_cn.json
+++ b/src/main/resources/assets/urushi/lang/zh_cn.json
@@ -944,6 +944,8 @@
 
   "fluid.urushi.hot_spring_water": "温泉水",
 
+  "block.urushi.hot_spring_water": "温泉水",
+
   "item.urushi.hot_spring_water_bucket": "温泉水桶",
 
   "gui.jei.category.urushi.fox_eating": "狐狸进食",
@@ -2019,6 +2021,7 @@
     "info.urushi.metal_element_paper": "用纸垂右击金气方块以获得",
 
     "info.urushi.water_element_paper": "用纸垂右击水气方块以获得",
+
     "block.urushi.oak_framed_orange_plaster": "橡木框橙色灰泥",
     "block.urushi.oak_framed_magenta_plaster": "橡木框品红色灰泥",
     "block.urushi.oak_framed_light_blue_plaster": "橡木框淡蓝色灰泥",
@@ -2200,6 +2203,7 @@
     "block.urushi.black_framed_red_plaster": "黑漆木框红色灰泥",
     "block.urushi.black_framed_black_plaster": "黑漆木框黑色灰泥",
     "itemGroup.urushi_plaster": "漆MOD丨灰泥",
+
     "item.urushi.baked_mochocho": "红豆车轮饼",
     "info.urushi.obanyaki": "大判烧",
     "info.urushi.kaitenyaki": "回转烧",
@@ -2269,22 +2273,45 @@
 	"info.urushi.cypress_sapling": "在主世界的山地类群系中生成",
 	"info.urushi.japanese_cedar_sapling": "在主世界的山地类群系或幽世维度中生成",
 	"info.urushi.lacquer_sapling": "在主世界的森林群系中，或地牢与平原村庄中的箱子中生成",
+	"patchouli.urushi.kakuriyo_book.name": "欢迎来到幽世",
+  "patchouli.urushi.kakuriyo_book.subtitle": "现世离",
+  "patchouli.urushi.kakuriyo_book.landing_text": "带你穿梭于漆（Urushi）的玄妙世界间的指南书。准备好奔赴$(#cc3345)往生$(#000)了吗？",
+  "patchouli.urushi.urushi_book.name": "关于漆MOD",
+  "patchouli.urushi.urushi_book.subtitle": "和风方块排排坐",
+  "patchouli.urushi.urushi_book.landing_text": "漆MOD添加了诸多的和风方块……以及魔法。",
+  "fluid_type.urushi.hot_spring_fluid": "温泉水",
+  "block.urushi.fermentation_barrel": "发酵桶",
+  "block.urushi.fermentation_barrel_with_rice": "装有米的发酵桶",
+  "block.urushi.fermentation_barrel_with_rice_malt": "装有酒曲的发酵桶",
+  "block.urushi.fermentation_barrel_with_shikomi_miso": "装有味噌曲的发酵桶",
+  "block.urushi.fermentation_barrel_with_miso": "装有味噌的发酵桶",
+  "item.urushi.shikomi_miso": "味噌曲",
+  "item.urushi.miso": "味噌",
+  "item.urushi.miso_soup": "味噌汤",
+  "item.urushi.green_onion_and_raw_egg_gyudon": "青葱生蛋牛肉盖浇饭",
+  "item.urushi.mustard_leaf_and_cod_caviar_gyudon": "雪菜明太子蛋黄酱牛肉盖浇饭",
+  "item.urushi.gold_leaf": "金箔",
+  "block.urushi.gold_leaf_block": "贴金木板",
+  "block.urushi.gold_leaf_slab": "贴金台阶",
+  "block.urushi.gold_leaf_stairs": "贴金楼梯",
+  "info.urushi.crop": "可种植在耕地上",
+  "info.urushi.fermentation_barrel": "放置即可等待发酵",
+  "info.urushi.fermentation_barrel2": "也可用8个需要发酵的物品右击发酵桶以发酵",
+  "info.urushi.rice_malt": "向发酵桶中放入8个米饭以获取",
+  "info.urushi.miso": "向发酵桶中放入8个味噌曲以获取",
+  "block.urushi.oak_wall_for_framed_blocks": "平滑橡木墙板",
+  "block.urushi.spruce_wall_for_framed_blocks": "平滑云杉木墙板",
+  "block.urushi.birch_wall_for_framed_blocks": "平滑白桦木墙板",
+  "block.urushi.jungle_wall_for_framed_blocks": "平滑丛林木墙板",
+  "block.urushi.acacia_wall_for_framed_blocks": "平滑金合欢木墙板",
+  "block.urushi.dark_oak_wall_for_framed_blocks": "平滑深色橡木墙板",
+  "block.urushi.japanese_apricot_wall_for_framed_blocks": "平滑梅木墙板",
+  "block.urushi.sakura_wall_for_framed_blocks": "平滑樱花木墙板",
+  "block.urushi.cypress_wall_for_framed_blocks": "平滑扁柏木墙板",
+  "block.urushi.japanese_cedar_wall_for_framed_blocks": "平滑柳杉木墙板",
+  "block.urushi.red_urushi_wall_for_framed_blocks": "平滑朱漆木墙板",
+  "block.urushi.black_urushi_wall_for_framed_blocks": "平滑黑漆木墙板"
 
-  "patchouli.urushi.book.name": "现世离",
-  "comment":"leave the book subtitle empty in ja_jp and zh_cn, we can understand Kanji",
-  "patchouli.urushi.book.subtitle": "",
-  "patchouli.urushi.book.landing_text": "带你穿梭于漆（Urushi）的玄妙世界间的指南书。准备好奔赴$(#cc3345)往生$(#000)了吗？"
     
-
-    
-
-
-
-
-
-
-
-
-
 
 }
