update zh_cn.json for 5.3.0

--- a/src/main/resources/assets/urushi/lang/zh_cn.json
+++ b/src/main/resources/assets/urushi/lang/zh_cn.json
@@ -736,8 +736,6 @@
 
   "info.urushi.saltandsand": "由沙滩或海洋群系的与水接触的沙子变化而成",
 
-  "info.urushi.udon": "使用切面刀切割面条面团以获得",
-
   "block.urushi.dirt_furnace": "土灶",
 
   "block.urushi.rice_cauldron": "釜",
@@ -1506,9 +1504,9 @@
 
     "info.urushi.amber_igniter1": "消耗10点火灵力以点燃七厘烤炉",
 
-    "info.urushi.uchiwa2": "消耗1点木灵力以调整七厘烤炉的火力",
+    "info.urushi.uchiwa3": "消耗1点木灵力以调整七厘烤炉的火力",
 
-    "info.urushi.uchiwa3": "吹飞杂草时每个方块需要消耗1点木灵力",
+    "info.urushi.uchiwa2": "吹飞杂草时每10个方块需要消耗1点木灵力",
 
     "info.urushi.kitsunebi3": "消耗10点火灵力以放置或投掷",
 
@@ -2232,12 +2230,12 @@
     "entity.urushi.salmon_roe_sushi_food": "鲑鱼子寿司",
     "entity.urushi.inari_food": "稻荷寿司",
     "block.urushi.urushi_hopper": "漆木漏斗",
-	"container.urushihopper": "漆木漏斗",
-	"info.urushi.urushi_hopper": "一种低成本漏斗",
-	"item.urushi.yakitori": "鸡葱串",
-	"item.urushi.hiyayakko": "凉拌豆腐",
-	"item.urushi.matured_japanese_apricot_fruit": "熟梅子",
-	"item.urushi.pickled_japanese_apricot": "梅干",
+    "container.urushihopper": "漆木漏斗",
+    "info.urushi.urushi_hopper": "一种低成本漏斗",
+    "item.urushi.yakitori": "鸡葱串",
+    "item.urushi.hiyayakko": "凉拌豆腐",
+    "item.urushi.matured_japanese_apricot_fruit": "熟梅子",
+    "item.urushi.pickled_japanese_apricot": "梅干",
     "block.urushi.green_onion_crop": "葱",
     "item.urushi.wood_enhanced_jadeite": "木气加持的翡翠",
     "item.urushi.fire_enhanced_jadeite": "火气加持的翡翠",
@@ -2310,8 +2308,120 @@
   "block.urushi.cypress_wall_for_framed_blocks": "平滑扁柏木墙板",
   "block.urushi.japanese_cedar_wall_for_framed_blocks": "平滑柳杉木墙板",
   "block.urushi.red_urushi_wall_for_framed_blocks": "平滑朱漆木墙板",
-  "block.urushi.black_urushi_wall_for_framed_blocks": "平滑黑漆木墙板"
-
-    
+  "block.urushi.black_urushi_wall_for_framed_blocks": "平滑黑漆木墙板",
+  "block.urushi.auto_crafting_table": "自动工作台",
+  "block.urushi.advanced_auto_crafting_table": "高级自动工作台",
+  "block.urushi.vertical_plaster_slab": "灰泥竖直台阶",
+  "block.urushi.vertical_orange_plaster_slab": "橙色灰泥竖直台阶",
+  "block.urushi.vertical_magenta_plaster_slab": "品红色灰泥竖直台阶",
+  "block.urushi.vertical_light_blue_plaster_slab": "淡蓝色灰泥竖直台阶",
+  "block.urushi.vertical_yellow_plaster_slab": "黄色灰泥竖直台阶",
+  "block.urushi.vertical_lime_plaster_slab": "黄绿色灰泥竖直台阶",
+  "block.urushi.vertical_pink_plaster_slab": "粉红色灰泥竖直台阶",
+  "block.urushi.vertical_light_gray_plaster_slab": "淡灰色灰泥竖直台阶",
+  "block.urushi.vertical_gray_plaster_slab": "灰色灰泥竖直台阶",
+  "block.urushi.vertical_cyan_plaster_slab": "青色灰泥竖直台阶",
+  "block.urushi.vertical_purple_plaster_slab": "紫色灰泥竖直台阶",
+  "block.urushi.vertical_blue_plaster_slab": "蓝色灰泥竖直台阶",
+  "block.urushi.vertical_brown_plaster_slab": "棕色灰泥竖直台阶",
+  "block.urushi.vertical_green_plaster_slab": "绿色灰泥竖直台阶",
+  "block.urushi.vertical_red_plaster_slab": "红色灰泥竖直台阶",
+  "block.urushi.vertical_black_plaster_slab": "黑色灰泥竖直台阶",
+  "block.urushi.orange_plaster_bars": "橙色灰泥屏风柱",
+  "block.urushi.magenta_plaster_bars": "品红色灰泥屏风柱",
+  "block.urushi.light_blue_plaster_bars": "淡蓝色灰泥屏风柱",
+  "block.urushi.yellow_plaster_bars": "黄色灰泥屏风柱",
+  "block.urushi.lime_plaster_bars": "黄绿色灰泥屏风柱",
+  "block.urushi.pink_plaster_bars": "粉红色灰泥屏风柱",
+  "block.urushi.light_gray_plaster_bars": "淡灰色灰泥屏风柱",
+  "block.urushi.gray_plaster_bars": "灰色灰泥屏风柱",
+  "block.urushi.cyan_plaster_bars": "青色色灰泥屏风柱",
+  "block.urushi.purple_plaster_bars": "紫色灰泥屏风柱",
+  "block.urushi.blue_plaster_bars": "蓝色灰泥屏风柱",
+  "block.urushi.brown_plaster_bars": "棕色灰泥屏风柱",
+  "block.urushi.green_plaster_bars": "绿色灰泥屏风柱",
+  "block.urushi.red_plaster_bars": "红色灰泥屏风柱",
+  "block.urushi.black_plaster_bars": "黑色灰泥屏风柱",
+  "block.urushi.horizontal_plaster_bars": "漆喰横向屏风柱",
+  "block.urushi.horizontal_orange_plaster_bars": "橙色灰泥横向屏风柱",
+  "block.urushi.horizontal_magenta_plaster_bars": "品红色灰泥横向屏风柱",
+  "block.urushi.horizontal_light_blue_plaster_bars": "淡蓝色灰泥横向屏风柱",
+  "block.urushi.horizontal_yellow_plaster_bars": "黄色灰泥横向屏风柱",
+  "block.urushi.horizontal_lime_plaster_bars": "黄绿色灰泥横向屏风柱",
+  "block.urushi.horizontal_pink_plaster_bars": "粉红色灰泥横向屏风柱",
+  "block.urushi.horizontal_light_gray_plaster_bars": "淡灰色灰泥横向屏风柱",
+  "block.urushi.horizontal_gray_plaster_bars": "灰色灰泥横向屏风柱",
+  "block.urushi.horizontal_cyan_plaster_bars": "青色灰泥横向屏风柱",
+  "block.urushi.horizontal_purple_plaster_bars": "紫色灰泥横向屏风柱",
+  "block.urushi.horizontal_blue_plaster_bars": "蓝色灰泥横向屏风柱",
+  "block.urushi.horizontal_brown_plaster_bars": "棕色灰泥横向屏风柱",
+  "block.urushi.horizontal_green_plaster_bars": "绿色灰泥横向屏风柱",
+  "block.urushi.horizontal_red_plaster_bars": "红色灰泥横向屏风柱",
+  "block.urushi.horizontal_black_plaster_bars": "黑色灰泥横向屏风柱",
+  "block.urushi.vertical_smooth_oak_slab": "平滑橡木竖直台阶",
+  "block.urushi.vertical_smooth_spruce_slab": "平滑云杉木竖直台阶",
+  "block.urushi.vertical_smooth_birch_slab": "平滑白桦木竖直台阶",
+  "block.urushi.vertical_smooth_jungle_slab": "平滑丛林木竖直台阶",
+  "block.urushi.vertical_smooth_acacia_slab": "平滑金合欢木竖直台阶",
+  "block.urushi.vertical_smooth_dark_oak_slab": "平滑深色橡木竖直台阶",
+  "block.urushi.vertical_smooth_japanese_apricot_slab": "平滑梅木竖直台阶",
+  "block.urushi.vertical_smooth_sakura_slab": "平滑樱花木竖直台阶",
+  "block.urushi.vertical_smooth_cypress_slab": "平滑扁柏木竖直台阶",
+  "block.urushi.vertical_smooth_japanese_cedar_slab": "平滑柳杉木竖直台阶",
+  "block.urushi.vertical_smooth_red_urushi_slab": "平滑朱漆木竖直台阶",
+  "block.urushi.vertical_smooth_black_urushi_slab": "平滑黑漆木竖直台阶",
+  "block.urushi.japanese_apricot_bars": "梅木屏风柱",
+  "block.urushi.sakura_bars": "樱花木屏风柱",
+  "block.urushi.cypress_bars": "扁柏屏风柱",
+  "block.urushi.japanese_cedar_bars": "柳杉木屏风柱",
+  "block.urushi.red_urushi_bars": "朱漆木屏风柱",
+  "block.urushi.black_urushi_bars": "黑漆木屏风柱",
+  "block.urushi.horizontal_oak_bars": "橡木横向屏风柱",
+  "block.urushi.horizontal_spruce_bars": "云杉木横向屏风柱",
+  "block.urushi.horizontal_birch_bars": "白桦木横向屏风柱",
+  "block.urushi.horizontal_jungle_bars": "丛林木横向屏风柱",
+  "block.urushi.horizontal_acacia_bars": "金合欢木横向屏风柱",
+  "block.urushi.horizontal_dark_oak_bars": "深色橡木横向屏风柱",
+  "block.urushi.horizontal_japanese_apricot_bars": "梅木横向屏风柱",
+  "block.urushi.horizontal_sakura_bars": "樱花木横向屏风柱",
+  "block.urushi.horizontal_cypress_bars": "扁柏木横向屏风柱",
+  "block.urushi.horizontal_japanese_cedar_bars": "柳杉木横向屏风柱",
+  "block.urushi.horizontal_red_urushi_bars": "朱漆木横向屏风柱",
+  "block.urushi.horizontal_black_urushi_bars": "黑漆木横向屏风柱",
+  "block.urushi.horizontal_green_bars": "绿色横向屏风柱",
+  "item.urushi.bamboo_cup": "竹筒",
+  "item.urushi.water_bamboo_cup": "水竹筒",
+  "item.urushi.milk_bamboo_cup": "奶竹筒",
+  "item.urushi.soy_source_bamboo_cup": "酱油竹筒",
+  "item.urushi.gravel_sushi": "沙砾寿司？！",
+  "entity.urushi.gravel_sushi_food": "沙砾寿司？！",
+  "item.urushi.minced_tuna_bowl": "金枪鱼泥盖饭",
+  "item.urushi.kansui_powder": "食用碱",
+  "block.urushi.alkaline_dough": "碱水面条面团",
+  "block.urushi.alkaline_noodles": "碱水面条",
+  "item.urushi.soy_source_ramen": "酱油拉面",
+  "item.urushi.miso_ramen": "味噌拉面",
+  "item.urushi.tonkotsu_ramen": "豚骨拉面",
+  "item.urushi.salt_ramen": "盐味拉面",
+  "info.urushi.auto_crafting_table": "可以自动进行工作台中的合成",
+  "info.urushi.auto_crafting_table2": "若△指向的方向存在箱子或其他容器，则自动向其输出合成产物。否则会以物品形式丢出。",
+  "info.urushi.bamboo_cup": "与玻璃瓶相似的容器，但是盛有液体时最多可堆叠64个",
+  "info.urushi.filled_bamboo_cup": "最多可堆叠64个",
+  "info.urushi.water_bamboo_cup": "与水瓶类似，可以使对泥土变为泥巴",
+  "info.urushi.milk_bamboo_cup": "与奶桶类似，饮用可以清除状态",
+  "info.urushi.udon": "使用切面刀切割放在地上的面条面团以获得",
+  "info.urushi.alkaline_noodles": "使用切面刀切割放在地上的碱水面条面团以获得",
+  "info.urushi.bars": "仅在对方块侧面放置时与其他方块侧面相连",
+  "biome.urushi.autumn_forest": "秋叶森林",
+  "biome.urushi.cedar_forest": "柳杉森林",
+  "biome.urushi.eulalia_plains": "芒草平原",
+  "biome.urushi.sakura_forest": "樱花森林",
+  "block.urushi.mirror_tier2": "翡翠反射镜",
+  "block.urushi.wood_element_emitter_tier2": "翡翠木气喷口",
+  "block.urushi.fire_element_emitter_tier2": "翡翠火气喷口",
+  "block.urushi.earth_element_emitter_tier2": "翡翠土气喷口",
+  "block.urushi.metal_element_emitter_tier2": "翡翠金气喷口",
+  "block.urushi.water_element_emitter_tier2": "翡翠水气喷口",
+  "container.urushi_auto_crafting_table": "自动工作台"
 
 }
