zh_cn tranlation for 5.4.0

--- a/src/main/resources/assets/urushi/lang/en_us.json
+++ b/src/main/resources/assets/urushi/lang/en_us.json
@@ -2463,7 +2463,7 @@
    "info.urushi.tv": "Right-click to change screen.",
    "info.urushi.katana1": "Right-click to rush attack.",
    "info.urushi.katana2": "Rushing attacks deal half the normal attack damage to all nearby mobs.",
-   "info.urushi.parapet": "The model becomes the proper look even when placing on a half block.",
+   "info.urushi.parapet": "Tightly fitted when placing on half blocks.",
    "info.urushi.plate": "Right-click to put a item.",
    "info.urushi.bamboo_basket": "Right-click to put items.",
    "info.urushi.invisible_redstone_inputs": "Visible only when you hold this block in your hand.",
