--- a/src/main/resources/assets/urushi/lang/zh_cn.json
+++ b/src/main/resources/assets/urushi/lang/zh_cn.json
@@ -2421,60 +2421,60 @@
   "block.urushi.metal_element_emitter_tier2": "翡翠金气喷口",
   "block.urushi.water_element_emitter_tier2": "翡翠水气喷口",
   "container.urushi_auto_crafting_table": "自动工作台",
-   "key.urushi.category": "Urushi",
-   "key.urushi.connectionKey": "Switch Texture Connections for Framed Blocks",
-    "block.urushi.landscape_fusuma": "Landscape Fusuma",
-    "block.urushi.morning_glory_pot": "Morning Glory Pot",
-    "block.urushi.tv": "TV",
-    "block.urushi.tv_dvd": "TV",
-    "block.urushi.tv_weather_forecast": "TV",
-    "block.urushi.rainwater_tank": "Rainwater Tank",
-    "block.urushi.bamboo_basket": "Bamboo Basket",
-    "item.urushi.straw": "Straw",
-    "block.urushi.oak_lattice_door": "Oak Lattice Door",
-    "block.urushi.spruce_lattice_door": "Spruce Lattice Door",
-    "block.urushi.birch_lattice_door": "Birch Lattice Door",
-    "block.urushi.jungle_lattice_door": "Jungle Lattice Door",
-    "block.urushi.acacia_lattice_door": "Acacia Lattice Door",
-    "block.urushi.dark_oak_lattice_door": "Dark Oak Lattice Door",
-    "block.urushi.japanese_apricot_lattice_door": "Japanese Apricot Lattice Door",
-    "block.urushi.sakura_lattice_door": "Sakura Lattice Door",
-    "block.urushi.cypress_lattice_door": "Cypress Lattice Door",
-    "block.urushi.japanese_cedar_lattice_door": "Japanese Cedar Lattice Door",
-    "block.urushi.red_urushi_lattice_door": "Red Urushi Lattice Door",
-    "block.urushi.black_urushi_lattice_door": "Black Urushi Lattice Door",
-   "block.urushi.plate": "Plate",
-   "block.urushi.blue_galvanised_iron_plate_block": "Blue Galvanised Iron Plate Block",
-   "block.urushi.blue_galvanised_iron_plate_slab": "Blue Galvanised Iron Plate Slab",
-   "block.urushi.blue_galvanised_iron_plate_stairs": "Blue Galvanised Iron Plate Stairs",
-   "block.urushi.vertical_blue_galvanised_iron_plate_slab": "Vertical Blue Galvanised Iron Plate Slab",
-   "block.urushi.blue_galvanised_iron_plate_trapdoor": "Blue Galvanised Iron Plate Trapdoor",
-   "block.urushi.red_galvanised_iron_plate_block": "Red Galvanised Iron Plate Block",
-   "block.urushi.red_galvanised_iron_plate_slab": "Red Galvanised Iron Plate Slab",
-   "block.urushi.red_galvanised_iron_plate_stairs": "Red Galvanised Iron Plate Stairs",
-   "block.urushi.vertical_red_galvanised_iron_plate_slab": "Vertical Red Galvanised Iron Plate Slab",
-   "block.urushi.red_galvanised_iron_plate_trapdoor": "Red Galvanised Iron Plate Trapdoor",
-   "block.urushi.rusted_galvanised_iron_plate_block": "Rusted Galvanised Iron Plate Block",
-   "block.urushi.rusted_galvanised_iron_plate_slab": "Rusted Galvanised Iron Plate Slab",
-   "block.urushi.rusted_galvanised_iron_plate_stairs": "Rusted Galvanised Iron Plate Stairs",
-   "block.urushi.vertical_rusted_galvanised_iron_plate_slab": "Vertical Rusted Galvanised Iron Plate Slab",
-   "block.urushi.rusted_galvanised_iron_plate_trapdoor": "Rusted Galvanised Iron Plate Trapdoor",
-   "info.urushi.tv": "Right-click to change screen.",
-   "info.urushi.katana1": "Right-click to rush attack.",
-   "info.urushi.katana2": "Rushing attacks deal half the normal attack damage to all nearby mobs.",
-   "info.urushi.parapet": "The model becomes the proper look even when placing on a half block.",
-   "info.urushi.plate": "Right-click to put a item.",
-   "info.urushi.bamboo_basket": "Right-click to put items.",
-   "info.urushi.invisible_redstone_inputs": "Visible only when you hold this block in your hand.",
-    "item.urushi.blue_kawara": "Blue Kawara",
-   "block.urushi.blue_kawara_block": "Blue Kawara Block",
+   "key.urushi.category": "漆MOD",
+   "key.urushi.connectionKey": "切换方块放置时材质的连接模式",
+    "block.urushi.landscape_fusuma": "风景画纸拉门",
+    "block.urushi.morning_glory_pot": "牵牛花爬藤盆栽",
+    "block.urushi.tv": "电视",
+    "block.urushi.tv_dvd": "电视",
+    "block.urushi.tv_weather_forecast": "电视",
+    "block.urushi.rainwater_tank": "雨水桶",
+    "block.urushi.bamboo_basket": "竹篓",
+    "item.urushi.straw": "稻杆",
+    "block.urushi.oak_lattice_door": "橡木格栅拉门",
+    "block.urushi.spruce_lattice_door": "云杉木格栅拉门",
+    "block.urushi.birch_lattice_door": "白桦木格栅拉门",
+    "block.urushi.jungle_lattice_door": "从林木格栅拉门",
+    "block.urushi.acacia_lattice_door": "金合欢木格栅拉门",
+    "block.urushi.dark_oak_lattice_door": "黑色橡木格栅拉门",
+    "block.urushi.japanese_apricot_lattice_door": "梅木格栅拉门",
+    "block.urushi.sakura_lattice_door": "樱花木格栅拉门",
+    "block.urushi.cypress_lattice_door": "扁柏木格栅拉门",
+    "block.urushi.japanese_cedar_lattice_door": "柳杉木格栅拉门",
+    "block.urushi.red_urushi_lattice_door": "朱漆木格栅拉门",
+    "block.urushi.black_urushi_lattice_door": "黑漆木格栅拉门",
+   "block.urushi.plate": "碟子",
+   "block.urushi.blue_galvanised_iron_plate_block": "蓝色彩钢板方块",
+   "block.urushi.blue_galvanised_iron_plate_slab": "蓝色彩钢板台阶",
+   "block.urushi.blue_galvanised_iron_plate_stairs": "蓝色彩钢板楼梯",
+   "block.urushi.vertical_blue_galvanised_iron_plate_slab": "蓝色彩钢板竖直台阶",
+   "block.urushi.blue_galvanised_iron_plate_trapdoor": "蓝色彩钢板活版门",
+   "block.urushi.red_galvanised_iron_plate_block": "红色彩钢板方块",
+   "block.urushi.red_galvanised_iron_plate_slab": "红色彩钢板台阶",
+   "block.urushi.red_galvanised_iron_plate_stairs": "红色彩钢板楼梯",
+   "block.urushi.vertical_red_galvanised_iron_plate_slab": "红色彩钢板竖直台阶",
+   "block.urushi.red_galvanised_iron_plate_trapdoor": "红色彩钢板活版门",
+   "block.urushi.rusted_galvanised_iron_plate_block": "锈蚀彩钢板方块",
+   "block.urushi.rusted_galvanised_iron_plate_slab": "锈蚀彩钢板台阶",
+   "block.urushi.rusted_galvanised_iron_plate_stairs": "锈蚀彩钢板楼梯",
+   "block.urushi.vertical_rusted_galvanised_iron_plate_slab": "锈蚀彩钢板竖直台阶",
+   "block.urushi.rusted_galvanised_iron_plate_trapdoor": "锈蚀彩钢板活版门",
+   "info.urushi.tv": "右击以切换屏幕",
+   "info.urushi.katana1": "右击可进行突进攻击",
+   "info.urushi.katana2": "突进攻击会对所有生物造成攻击力一半的伤害",
+   "info.urushi.parapet": "可以紧密贴合在半砖上",
+   "info.urushi.plate": "右击以放入物品",
+   "info.urushi.bamboo_basket": "右击以放入物品",
+   "info.urushi.invisible_redstone_inputs": "仅当手持时才可以看见对应的方块",
+    "item.urushi.blue_kawara": "蓝瓦",
+   "block.urushi.blue_kawara_block": "蓝瓦块",
 
-   "block.urushi.blue_kawara_slab": "Blue Kawara Slab",
+   "block.urushi.blue_kawara_slab": "蓝瓦台阶",
 
-   "block.urushi.blue_kawara_stairs": "Blue Kawara Stairs",
-   "block.urushi.blue_kawara_roof_45": "Blue Kawara Roof for Stairs",
+   "block.urushi.blue_kawara_stairs": "蓝瓦楼梯",
+   "block.urushi.blue_kawara_roof_45": "蓝瓦陡峭屋顶",
 
-   "block.urushi.blue_kawara_roof_225": "Blue Kawara Roof for Slab",
-   "block.urushi.blue_kawara_wall": "Blue Kawara Wall"
+   "block.urushi.blue_kawara_roof_225": "蓝瓦平缓屋顶",
+   "block.urushi.blue_kawara_wall": "蓝瓦墙"
 
 }
