--- a/src/main/resources/assets/urushi/lang/ja_jp.json
+++ b/src/main/resources/assets/urushi/lang/ja_jp.json
@@ -2475,8 +2475,20 @@
    "block.urushi.blue_kawara_roof_45": "青緑瓦の屋根(45°)",
 
    "block.urushi.blue_kawara_roof_225": "青緑瓦の屋根(22.5°)",
-   "block.urushi.blue_kawara_wall": "青緑瓦の塀"
-   
+   "block.urushi.blue_kawara_wall": "青緑瓦の塀",
+   "entity.urushi.miso_soup_food": "味噌汁",
+   "entity.urushi.cheese_gyudon_food": "チーズ牛丼",
+   "entity.urushi.cheese_gyudon_with_onsen_egg_food": "チーズ牛丼温玉付き",
+   "entity.urushi.green_onion_and_raw_egg_gyudon_food": "ねぎ玉牛丼",
+   "entity.urushi.mustard_leaf_and_cod_caviar_gyudon_food": "高菜明太マヨ牛丼",
+   "entity.urushi.sakura_mochi_food": "桜餅",
+   "entity.urushi.ohagi_food": "おはぎ",
+   "entity.urushi.kusa_mochi_food": "草餅",
+   "entity.urushi.soy_source_ramen_food": "醤油ラーメン",
+   "entity.urushi.salt_ramen_food": "塩ラーメン",
+   "entity.urushi.miso_ramen_food": "味噌ラーメン",
+   "entity.urushi.tonkotsu_ramen_food": "とんこつラーメン",
+   "entity.urushi.minced_tuna_bowl_food": "まぐろたたき丼"
    
    
 }
